--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/eyes_no_background.png" />
+    <link rel="icon" type="image/png" href="/eyes.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>prp</title>
 </head>
