--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/eyes.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>prp</title>
+    <title>Post-Rug Photos</title>
 </head>
 
 <body>
