--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/eyes.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Post-Rug Photos</title>
+
+    <title>Post-Rug Photos | Crypto PRP Tragedy Snapshots</title>
+
+    <!-- SEO Meta -->
+    <meta name="description" content="Post-Rug Photos (PRP) documents crypto rug pull incidents. Browse images and stories from crypto tragedies, scams, and post-rug events." />
+    <meta name="keywords" content="PRP, Post-Rug Photos, crypto scams, crypto tragedy, crypto rug pull, post-rug, crypto incidents" />
+    <meta name="author" content="Your Name or Brand" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Post-Rug Photos | Crypto PRP Tragedy Snapshots" />
+    <meta property="og:description" content="Browse Post-Rug Photos (PRP) documenting crypto rug pull incidents and tragedies." />
+    <meta property="og:image" content="/eyes.png" />
+    <meta property="og:url" content="https://yourdomain.com" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Post-Rug Photos | Crypto PRP Tragedy Snapshots" />
+    <meta name="twitter:description" content="Browse Post-Rug Photos (PRP) documenting crypto rug pull incidents and tragedies." />
+    <meta name="twitter:image" content="/eyes.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://yourdomain.com" />
+
 </head>
 
 <body>
+    <h1 class="sr-only">Post-Rug Photos: Documenting Crypto PRP Tragedies</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
