--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- SEO Meta -->
     <meta name="description" content="Post-Rug Photos (PRP) documents crypto rug pull incidents. Browse images and stories from crypto tragedies, scams, and post-rug events." />
     <meta name="keywords" content="PRP, Post-Rug Photos, crypto scams, crypto tragedy, crypto rug pull, post-rug, crypto incidents" />
-    <meta name="author" content="Your Name or Brand" />
+    <meta name="author" content="Post-Rug Photos" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Post-Rug Photos | Crypto PRP Tragedy Snapshots" />
     <meta property="og:description" content="Browse Post-Rug Photos (PRP) documenting crypto rug pull incidents and tragedies." />
     <meta property="og:image" content="/eyes.png" />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:url" content="https://postrugphotos.xyz" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -27,7 +27,7 @@
     <meta name="twitter:image" content="/eyes.png" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://yourdomain.com" />
+    <link rel="canonical" href="https://postrugphotos.xyz" />
 
 </head>
 
