feat: update SEO keywords in index.html; enhance accessibility and link structure in CollectionSection, HomeSection, and ShareSection

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- SEO Meta -->
     <meta name="description" content="Post-Rug Photos (PRP) documents crypto rug pull incidents. Browse images and stories from crypto tragedies, scams, and post-rug events." />
-    <meta name="keywords" content="PRP, Post-Rug Photos, crypto scams, crypto tragedy, crypto rug pull, post-rug, crypto incidents" />
+    <meta name="keywords" content="PRP, Post-Rug Photos, crypto scams, crypto tragedy, crypto rug pull, post-rug, crypto incidents, postrugphotos, Rugstew, Hyperliquid , Nft, Hyperliquid nft, Post-Rug Photos" />
     <meta name="author" content="Post-Rug Photos" />
 
     <!-- Open Graph / Facebook -->
